--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,4 @@
-name: DevSecOps CI/CD
+name: DevSecOps CI/CD Pipeline
 
 on:
   push:
@@ -7,10 +7,13 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  build_test_security:
+    name: Build, Test, and Security Scan
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v3
 
       - name: Setup Python
         uses: actions/setup-python@v4
@@ -19,19 +22,24 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest bandit
 
       - name: Run Unit Tests
-        run: pytest
+        run: |
+          export PYTHONPATH=$PYTHONPATH:$(pwd)/src
+          pytest
 
-      - name: Security Scan
+      - name: Security Scan with Bandit
         run: bandit -r src
 
-  deploy-staging:
+  deploy_staging:
+    name: Deploy to Staging
     runs-on: ubuntu-latest
-    needs: build-and-test
+    needs: build_test_security
     if: github.ref == 'refs/heads/main'
+
     steps:
       - name: Simulate Deployment
         run: echo "Deploying application to staging..."
